<resources>
    <string name="app_name">deGustibus</string>

    <!-- Fragment Titles -->
    <string name="title_Home" translatable="false">Home</string>
    <string name="title_Completed">Completed</string>
    <string name="title_Edit">Edit</string>
    <string name="title_first_Edit">Set Your Profile</string>
    <string name="title_Incoming">Incoming</string>
    <string name="title_Notifications">Notifications</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Settings">Settings</string>

    <!-- Nav titles -->
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_incoming">Incoming</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <!-- Settings -->
    <string name="set_TitleModify">Modify Password</string>
    <string name="set_TitleDelete">Delete Account</string>
    <string name="set_TitleLogout">Logout</string>
    <string name="set_CatAccount" translatable="false">Account</string>
    <string name="set_SumModify">Click here to insert a new password</string>
    <string name="set_SumDelete">This operation will remove the account permanently</string>

    <!-- EDIT PROFILE -->
    <string name="default_email" translatable="false">Email</string>
    <string name="default_desc">Description</string>
    <string name="default_phone">Phone</string>
    <string name="default_location">Zones</string>
    <string name="default_availab">Availability</string>
    <string name="default_car">Vehicle</string>

    <string name="default_fullname">Name and Surname</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="motorbike">Motorbike</string>
    <string name="select_action">Select action</string>
    <string name="name" translatable="false">Mario Rossi</string>
    <string name="email" translatable="false">mario@delivering.it</string>
    <string name="desc">Love delivering.</string>
    <string name="phone" translatable="false">011 2537598</string>

    <!-- Utils -->
    <string name="camera">Capture photo from camera</string>
    <string name="gallery">Select photo from gallery</string>
    <string name="saved">Saved!</string>
    <string name="permission_denied">Please, enable the requested permissions to access this functionality!</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Authentication -->
    <string name="action_sign_in_short">Register</string>
    <string name="reg_email" translatable="false">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="connect_failed">Please, check your internet connection!</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in deGustibus now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>

    <string name="err_emailMiss">Enter email address!</string>
    <string name="err_passMiss">Enter password!</string>
    <string name="psw_changed">Password changed successfully!</string>
    <string name="err_passShort">Password too short, enter minimum 6 characters!</string>
    <string name="reg_compl">Registration completed successfully, welcome!</string>
    <string name="err_reg">Authentication failed.</string>
    <string name="pass_ok">We have sent you instructions to reset your password!</string>
    <string name="pass_err">Failed to send reset email!</string>

    <!-- Empty Layouts -->
    <string name="notifications_done">Well done! You\'ve managed all the notifications!</string>

    <string name="resStatus">"Status: "</string>
    <string name="resAccept">Accept</string>
    <string name="resRefuse">Refuse</string>
    <string name="resOrder">Order</string>
    <string name="resDate">Date:</string>
    <string name="resHour">"Hour: "</string>
    <string name="resTotal">"Total: "</string>
    <string name="resCustAddress">"Customer Address: "</string>
    <string name="resRestaurant">"Restaurant: "</string>
    <string name="resRestAddress">"Restaurant Address: "</string>
    <string name="resCustomer">"Customer: "</string>

    <string name="status_new">new order</string>
    <string name="status_incoming">incoming</string>
    <string name="status_elaboration">elaboration</string>
    <string name="status_refused">refused</string>
    <string name="status_delivering">delivering</string>
    <string name="status_done">delivered</string>

    <string name="typeNot_new">New order</string>
    <string name="typeNot_refused">Refused order</string>
    <string name="typeNot_incoming">Incoming order</string>
    <string name="typeNot_accepted">Order accepted</string>
    <string name="typeNot_deliverying">Delivering order</string>
    <string name="typeNot_done">Delivered</string>
    <string name="typeNot_noRider">No rider available</string>
    <string name="desc1">Oh no! It seems your order has been refused by</string>
    <string name="desc2">" because no rider is currently available!"</string>
    <string name="desc3">Your order #</string>
    <string name="desc4">has been confirmed by</string>
    <string name="desc5">You have received a new order #</string>
    <string name="desc6">to be delivered. \\nCheck details in your incoming box.</string>
    <string name="desc7">Your order has been accepted by </string>
    <string name="desc8">Your order will be delivered by </string>
    <string name="desc9"> has been delivered!</string>

    <string name="err_reservations">Ops&#8230; nothing to show here!</string>
    <string name="err_connection">It seems you\'re not connected! Please enable your Internet connection&#8230;</string>
    <string name="welcome">Welcome back!</string>

    <string name="buttonPick">Pick up</string>
    <string name="buttonDeliver">Deliver</string>
    <string name="errProfile">Complete your profile before continuing!</string>
    <string name="menu_available">Available</string>
    <string name="showInMaps">map</string>
    <string name="new_notification">New notification!</string>
    <string name="notification_message">Open the notification section ...</string>

    <string name="gps">Please allow the GPS!</string>
    <string name="err_name">Name is required!</string>
    <string name="err_desc">Description in required!</string>
    <string name="err_phone">Phone is required!</string>
    <string name="home_distance">Distance</string>
    <string name="see_reviews">Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No rating has been received yet!</string>
    <string name="ratings">Ratings</string>

    <string name="sort_by">Sort by</string>
    <string name="by_name">Name</string>
    <string name="by_rating">Rating</string>
    <string name="by_date">Date</string>
    <string name="rating_name">Name:</string>
    <string name="rating_score">Score:</string>
    <string name="map_address">Address:</string>
    <string name="map_time">Time:</string>
    <string name="map_distance" translatable="false">Km:</string>

    <string name="exitMap">Press back to exit from map mode!</string>
    <string name="modPassword">Modify Password</string>
    <string name="passwordHint">New Password</string>
    <string name="passwordRepHint">Repeat Password</string>
    <string name="err_gen">Ops... something went wrong!</string>
    <string name="deleteTitle">Delete account</string>
    <string name="deleteDesc">This operation will remove your account permanently, are you sure that you want to continue?</string>
    <string name="deleteCompleted">Account deleted!</string>
    <string name="err_passSame">Passwords are not the same, please insert them correctly!</string>
</resources>
