<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_incoming"
            android:icon="@drawable/ic_menu_incoming"
            android:title="@string/menu_incoming" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

    </group>
    <item
        android:icon="@drawable/ic_check_black_24dp"
        android:id="@+id/nav_available"
        android:title="@string/menu_available"
        app:actionLayout="@layout/switch_item" />


</menu>
