<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
        android:theme="@style/ToolbarTheme"
        android:id="@+id/toolbar">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:src="@drawable/user_profile"
                android:onClick="getPhoto"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/tv_edit_fullName"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_fullname"
                android:theme="@style/TextView"/>
            <EditText
                android:id="@+id/et_edit_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/tv_edit_email"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_email"
                android:theme="@style/TextView"/>
            <EditText
                android:id="@+id/et_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/tv_edit_desc"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_desc"
                android:theme="@style/TextView"/>
            <EditText
                android:id="@+id/et_edit_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="4"/>

            <TextView
                android:id="@+id/tv_edit_phone"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_phone"
                android:theme="@style/TextView"/>
            <EditText
                android:id="@+id/et_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

            <TextView
                android:id="@+id/tv_edit_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_car"
                android:theme="@style/TextView"/>

            <RadioGroup
                android:id="@+id/radioGroupID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButtonBike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bike" />

                <RadioButton
                    android:id="@+id/radioButtonCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car" />

                <RadioButton
                    android:id="@+id/radioButtonMB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/motorbike" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
