<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_horizontal"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:mpb_progressStyle="horizontal"
            app:mpb_useIntrinsicPadding="false" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_drawable"
                android:orientation="vertical"
                android:showDividers="end">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"/>

                <RatingBar
                    android:id="@+id/simpleRatingBar"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <Button
                    android:id="@+id/reviewsButton"
                    style="@style/FirebaseUI.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/see_reviews" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_showD_fullName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_fullname"
                android:theme="@style/TextView" />

            <TextView
                android:id="@+id/tv_show_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow" />

            <TextView
                android:id="@+id/tv_showD_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_email"
                android:theme="@style/TextView" />

            <TextView
                android:id="@+id/tv_show_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow" />

            <TextView
                android:id="@+id/tv_showD_desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_desc"
                android:theme="@style/TextView" />

            <TextView
                android:id="@+id/tv_show_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:theme="@style/TextViewShow" />

            <TextView
                android:id="@+id/tv_showD_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_phone"
                android:theme="@style/TextView" />

            <TextView
                android:id="@+id/tv_show_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow" />

            <TextView
                android:id="@+id/tv_showD_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_car"
                android:theme="@style/TextView" />

            <TextView
                android:id="@+id/tv_show_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

