<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
        android:theme="@style/ToolbarTheme"
        android:id="@+id/toolbar">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:src="@drawable/user_profile"/>

            <TextView
                android:id="@+id/tv_showD_fullName"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_fullname"
                android:theme="@style/TextView"/>
            <TextView
                android:id="@+id/tv_show_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow"/>

            <TextView
                android:id="@+id/tv_showD_email"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_email"
                android:theme="@style/TextView"/>
            <TextView
                android:id="@+id/tv_show_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow"/>
            <TextView
                android:id="@+id/tv_showD_RestAddress"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_RestAddress"
                android:theme="@style/TextView"/>
            <TextView
                android:id="@+id/tv_show_RestAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow"/>

            <TextView
                android:id="@+id/tv_showD_desc"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_desc"
                android:theme="@style/TextView"/>
            <TextView
                android:id="@+id/tv_show_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow"/>

            <TextView
                android:id="@+id/tv_showD_phone"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/default_phone"
                android:theme="@style/TextView"/>
            <TextView
                android:id="@+id/tv_show_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow"/>

            <TextView
                android:id="@+id/tv_showD_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_location"
                android:theme="@style/TextView"/>
            <TextView
                android:id="@+id/tv_show_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewShow"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
