<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <!-- status -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="50">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/resStatus"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="right">

                <Button
                    android:id="@+id/orderButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/resAccept"
                    android:visibility="invisible"
                    tools:text="@string/resAccept" />

                <Button
                    android:id="@+id/refuseButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/resRefuse"
                    android:visibility="invisible"
                    tools:text="@string/resRefuse" />
            </LinearLayout>
        </LinearLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/customerMaps"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_place_24dp"
                android:enabled="true"
                android:text="@string/showInMaps"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/customer"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/restaurantMaps"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_place_24dp"
                android:enabled="true"
                android:text="@string/showInMaps"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/restaurant"
                app:layout_constraintTop_toBottomOf="@+id/customerMaps" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resCustomer"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/customer"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="15dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/customerMaps"
                app:layout_constraintStart_toEndOf="@+id/textView"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resRestaurant"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/restaurant"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="15dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/restaurantMaps"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                tools:text="@tools:sample/lorem" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resDate"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resHour"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resTotal"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="35,60 €"
                    android:textSize="13dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>